--- a/roster.html
+++ b/roster.html
@@ -128,7 +128,7 @@
 <tr><td>CHI</td><td>David Montgomery       </td></tr>
 <tr><td>BUF</td><td>Zack Moss              </td></tr>
 <tr><td> NO</td><td>Mark Ingram            </td></tr>
-<tr><td>TEN</td><td>Adrian Peterson        </td></tr>
+<tr><td>SEA</td><td>Adrian Peterson        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIN</td><td>Justin Jefferson       </td></tr>
 <tr><td>LAR</td><td>Robert Woods           </td></tr>
