--- a/week14.html
+++ b/week14.html
@@ -8,7 +8,7 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (1)</b></font></td></tr>
 <tr><td>KMurray</td>       <td></td><td align=right>0</td></tr>
-<tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Freeman</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Hilliard</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Lockett</td>       <td></td><td align=right>0</td></tr>
 <tr><td>THiggins</td>      <td></td><td align=right>0</td></tr>
@@ -109,14 +109,14 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (9)</b></font></td></tr>
-<tr><td>Ryan</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Rodgers</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Chubb</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
-<tr><td>RJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Cooks</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Aiyuk</td>         <td></td><td align=right>0</td></tr>
+<tr><td>DAdams</td>        <td></td><td align=right>0</td></tr>
+<tr><td>DSamuel</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Hockenson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Gay</td>           <td></td><td align=right>0</td></tr>
-<tr><td>Stevenson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Lance</td>         <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
